--- a/curso_base/package.json
+++ b/curso_base/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@pmndrs/branding": "^0.0.8",
     "@react-three/drei": "9.77.4",
     "@react-three/fiber": "8.13.4",
     "maath": "0.7.0",
