--- a/curso_base/package.json
+++ b/curso_base/package.json
@@ -11,6 +11,7 @@
     "maath": "0.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "three": "0.153.0"
   },
