--- a/curso_base/package.json
+++ b/curso_base/package.json
@@ -13,7 +13,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
-    "three": "0.153.0"
+    "three": "0.153.0",
+    "valtio": "^1.13.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
