--- a/curso_base/package.json
+++ b/curso_base/package.json
@@ -8,6 +8,7 @@
     "@pmndrs/branding": "^0.0.8",
     "@react-three/drei": "9.77.4",
     "@react-three/fiber": "8.13.4",
+    "framer-motion": "^11.0.28",
     "maath": "0.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
